# arkanoid-gl

./: README.md
src/: .gitignore  CMakeLists.txt  config.h  main.cpp
src/ecs/: ecsgame.cpp  ecsgame.h
src/ecs/component/: components.h
src/ecs/entity/: entitymanager.cpp  entitymanager.h
src/ecs/system/: gamelogicsystem.cpp  gamelogicsystem.h  inputsystem.cpp  inputsystem.h  physicssystem.cpp  physicssystem.h  powerupsystem.cpp  powerupsystem.h  rendersystem.cpp  rendersystem.h
src/gl/: buffer.h
src/oop/: gameobjects.cpp  gameobjects.h  oopgame.cpp  oopgame.h
src/shaders/: arkanoid.frag  arkanoid.vert
src/utils/: math.cpp  math.h
